--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,6 @@
-<p>
-  game works!
-</p>
 <div id='userVideo' class='userVideoDiv'>
 </div>
+
+{{aiSelection}}
+
+<button (click)='aiMove()'>click me</button>
